Renamed connections to contact us Fixed text visibillity on serevices page

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -16,6 +16,16 @@
     margin-top: 2rem;
 }
 
+.Tumi .Tumi-subtitle{
+    color: #fff;
+}
+
+@media(min-width: 1024px){
+    .Tumi .Tumi-subtitle{
+        color: #000;
+    }
+}
+
 .Tumi .Tumi-inlineLink{
     display: initial;
 }
